{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 44,
  "lineage": "8f7bef55-baf2-d2ce-9237-cec34e50aa94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eks-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccb9dcde1d497fda",
            "association_id": "eipassoc-036569043d79158a3",
            "domain": "vpc",
            "id": "eipalloc-0ccb9dcde1d497fda",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07aa4ba637e486def",
            "private_dns": "ip-10-110-1-184.ap-northeast-2.compute.internal",
            "private_ip": "10.110.1.184",
            "public_dns": "ec2-52-79-100-11.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.100.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-eks-public-nat-gateway"
            },
            "tags_all": {
              "Name": "terraform-eks-public-nat-gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-eks-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:internet-gateway/igw-0da7f5bffd59b7c97",
            "id": "igw-0da7f5bffd59b7c97",
            "owner_id": "349630926222",
            "tags": {
              "Name": "terraform-eks-igw"
            },
            "tags_all": {
              "Name": "terraform-eks-igw"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-eks-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccb9dcde1d497fda",
            "connectivity_type": "public",
            "id": "nat-0b44e8cf040b0a780",
            "network_interface_id": "eni-07aa4ba637e486def",
            "private_ip": "10.110.1.184",
            "public_ip": "52.79.100.11",
            "subnet_id": "subnet-0d4184520ea362433",
            "tags": {
              "Name": "terraform-eks-nat-gateway"
            },
            "tags_all": {
              "Name": "terraform-eks-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eks-eip",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-eks-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:route-table/rtb-01a2f650eedee5f0b",
            "id": "rtb-01a2f650eedee5f0b",
            "owner_id": "349630926222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b44e8cf040b0a780",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-eks-private"
            },
            "tags_all": {
              "Name": "terraform-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eks-eip",
            "aws_nat_gateway.terraform-eks-nat-gateway",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-eks-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:route-table/rtb-07fe1587c0f09f012",
            "id": "rtb-07fe1587c0f09f012",
            "owner_id": "349630926222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da7f5bffd59b7c97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-eks-public"
            },
            "tags_all": {
              "Name": "terraform-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-eks-igw",
            "aws_vpc.terraform-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-eks-trust-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:route-table/rtb-014cf99f12178d30f",
            "id": "rtb-014cf99f12178d30f",
            "owner_id": "349630926222",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-eks-trust"
            },
            "tags_all": {
              "Name": "terraform-eks-trust"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-eks-private-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cee1abe79075ff3e",
            "route_table_id": "rtb-01a2f650eedee5f0b",
            "subnet_id": "subnet-042691bbd0a3870a1"
          },
          "dependencies": [
            "aws_eip.terraform-eks-eip",
            "aws_nat_gateway.terraform-eks-nat-gateway",
            "aws_route_table.terraform-eks-private-route",
            "aws_subnet.terraform-eks-private-subnet",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e55007ffb0d35f1",
            "route_table_id": "rtb-01a2f650eedee5f0b",
            "subnet_id": "subnet-0da79a050a1b5131b"
          },
          "dependencies": [
            "aws_eip.terraform-eks-eip",
            "aws_nat_gateway.terraform-eks-nat-gateway",
            "aws_route_table.terraform-eks-private-route",
            "aws_subnet.terraform-eks-private-subnet",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-eks-public-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075516b383cd3f9e7",
            "route_table_id": "rtb-07fe1587c0f09f012",
            "subnet_id": "subnet-0d4184520ea362433"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-eks-igw",
            "aws_route_table.terraform-eks-public-route",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d53eca2771b81d8",
            "route_table_id": "rtb-07fe1587c0f09f012",
            "subnet_id": "subnet-09ba36d120fa220d4"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-eks-igw",
            "aws_route_table.terraform-eks-public-route",
            "aws_subnet.terraform-eks-public-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-eks-trust-routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0413429b522e7bae6",
            "route_table_id": "rtb-014cf99f12178d30f",
            "subnet_id": "subnet-0c34103957807dda6"
          },
          "dependencies": [
            "aws_route_table.terraform-eks-trust-route",
            "aws_subnet.terraform-eks-trust-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b51b8819e430100",
            "route_table_id": "rtb-014cf99f12178d30f",
            "subnet_id": "subnet-0d17c49ca9f789131"
          },
          "dependencies": [
            "aws_route_table.terraform-eks-trust-route",
            "aws_subnet.terraform-eks-trust-subnet",
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:security-group/sg-0c5261969735ba985",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5261969735ba985",
            "ingress": [
              {
                "cidr_blocks": [
                  "223.62.173.126/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-cluster",
            "name_prefix": "",
            "owner_id": "349630926222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-cluster"
            },
            "tags_all": {
              "Name": "terraform-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "terraform-eks-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "223.62.173.126/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3608048107",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c5261969735ba985",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-eks-cluster",
            "aws_vpc.terraform-eks-vpc",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-eks-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:subnet/subnet-042691bbd0a3870a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.110.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042691bbd0a3870a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349630926222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-private-a",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-private-a",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:subnet/subnet-0da79a050a1b5131b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.110.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da79a050a1b5131b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349630926222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-private-c",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-private-c",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-eks-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:subnet/subnet-0d4184520ea362433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4184520ea362433",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349630926222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-public-a",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-public-a",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:subnet/subnet-09ba36d120fa220d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.110.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ba36d120fa220d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349630926222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-public-c",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-public-c",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-eks-trust-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:subnet/subnet-0c34103957807dda6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.110.111.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c34103957807dda6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349630926222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-trust-a",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-trust-a",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:subnet/subnet-0d17c49ca9f789131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.110.112.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d17c49ca9f789131",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "349630926222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-trust-c",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-trust-c",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0b3f6355c94484dfd"
          },
          "dependencies": [
            "aws_vpc.terraform-eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:349630926222:vpc/vpc-0b3f6355c94484dfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-0fb260dbdcbc4a4e3",
            "default_route_table_id": "rtb-00bdeb5ef20ffdf0e",
            "default_security_group_id": "sg-094443001dacf9993",
            "dhcp_options_id": "dopt-29aaed42",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b3f6355c94484dfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bdeb5ef20ffdf0e",
            "owner_id": "349630926222",
            "tags": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}